editor/tree-sitter/grammar.js
    source_file: $ => repeat(choice(
      $._newline,
      $._top_level_statement,
    )),

    _top_level_statement: $ => choice(
      $.import_statement,
      $.qualified_import_statement,
      $._statement,                          // _statement already includes _declaration
    ),

    /* =====================================================================
     * Imports
     * ===================================================================*/
    // Selective import: `from xxx import name [as alias] [, ...]`
    decorator: $ => seq(
      '@',
      field('name', $.identifier),
      optional(seq(
        '(',
        optional($.decorator_arguments),
        ')',
      )),
    ),

    function_declaration: $ => seq(
      optional('async'),
      'fn',
      field('name', $.function_name),
      optional(field('generics', $.generic_parameters)),
      '(',
      optional(field('parameters', $.parameter_list)),
      ')',
      optional(seq('->', field('return_type', $._type))),
      choice(
        field('body', $.function_body),
        $._newline,                  // @native fn — no body
      ),
    ),

    // `identifier` already greedily absorbs a trailing `!` (see the
    // identifier terminal at the bottom), so no extra suffix is needed
    // for mutating-method names like `sort!`.
    function_name: $ => choice(
      $.identifier,
      $.operator_name,
    ),

    function_body: $ => seq(
      ':',
      optional(seq(
        $._indent,
        repeat($.contract_clause),
        repeat1($._statement),
        $._dedent,
      )),
    ),

    type_alias_declaration: $ => seq(
      'type',
      field('name', $.identifier),
      optional(field('generics', $.generic_parameters)),
      '=',
      field('type', $._type),
      $._newline,
    ),

    /* ------- @directive definition (#708) ------- */
    _type: $ => $.union_type,

    union_type: $ => prec.left(seq(
      $._primary_type,
      repeat(seq('|', $._primary_type)),
    )),

    _primary_type: $ => choice(
      $.primitive_type,
      $.named_type,
      $.tuple_type,
      $.function_type,
      $.weak_type,
      $.option_type,
      $.array_type,
    ),

    primitive_type: $ => choice(...PRIMITIVE_TYPES),

    named_type: $ => prec.right(seq(
      $.identifier,
      optional($.type_arguments),
      repeat(seq(
        '::',
        $.identifier,
        optional($.type_arguments),
      )),
    )),

    type_arguments: $ => seq(
      '<',
      sep1($._type, ','),
      '>',
    ),

    tuple_type: $ => prec(1, seq(
      '(',
      $._type,
      ',',
      optional(sep1($._type, ',')),
      ')',
    )),

    function_type: $ => seq(
      'fn',
      '(',
      optional(sep1($._type, ',')),
      ')',
      '->',
      $._type,
    ),

    option_type: $ => prec(PREC.postfix, seq($._primary_type, '?')),

    array_type: $ => prec(PREC.postfix, seq(
      $._primary_type,
      '[',
      optional($.integer_literal),
      ']',
    )),

    /* =====================================================================
     * Statements
     * ===================================================================*/
    _statement: $ => choice(
      seq($._simple_statement, $._newline),
      $._compound_statement,
      $._declaration,
    ),

    assignment_statement: $ => prec.right(PREC.conditional - 1, seq(
      field('left', $._lvalue),
      '=',
      field('right', $._expression),
    )),

    compound_assignment: $ => prec.right(PREC.conditional - 1, seq(
      field('left', $._lvalue),
      field('operator', choice(...COMPOUND_ASSIGN_OPS)),
      field('right', $._expression),
    )),

    /* `name: Type = value` — implicit-binding form (no `let` keyword) */
    typed_binding_statement: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
      '=',
      field('value', $._expression),
    ),

    /* Both forms: `(a, b) = expr`  and  `a, b = expr` */
    tuple_destructure_statement: $ => choice(
      seq(
        '(',
        sep1($.identifier, ','),
        ')',
        '=',
        field('value', $._expression),
      ),
      seq(
        $.identifier,
        repeat1(seq(',', $.identifier)),
        '=',
        field('value', $._expression),
      ),
    ),

    expect_statement: $ => seq(
      'expect',
      '(',
      field('actual', $._expression),
      ')',
      '.',
      field('matcher', $.identifier),
      optional(seq(
        '(',
        optional(sep1($._expression, ',')),
        ')',
      )),
    ),

    expression_statement: $ => $._expression,

    _lvalue: $ => choice(
      $.identifier,
      $._lvalue_postfix,
    ),

    block: $ => seq(
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    /* =====================================================================
     * Patterns
     * ===================================================================*/
    qualified_identifier: $ => prec.right(seq(
      $.identifier,
      repeat(seq('::', $.identifier)),
    )),

    _expression: $ => choice(
      $.lambda_expression,
      $.if_expression,
      $.case_expression,
      $._conditional_expression,
    ),

    _postfix_expression: $ => choice(
      $._primary_expression,
      $.call_expression,
      $.index_expression,
      $.field_access,
      $.unwrap_expression,
      $.update_expression,
      $.cast_expression,
    ),

    call_expression: $ => prec(PREC.postfix, seq(
      field('function', $._postfix_expression),
      '(',
      optional(field('arguments', $.argument_list)),
      ')',
    )),

    field_access: $ => prec(PREC.postfix, seq(
      field('object', $._postfix_expression),
      '.',
      field('field', $.identifier),
    )),

    argument_list: $ => sep1($.argument, ','),

    argument: $ => choice(
      seq(field('name', $.identifier), '=', field('value', $._expression)),
      field('value', $._expression),
    ),

    /* ------- Primary ------- */
    tuple_literal: $ => choice(
      // 1-tuple `(e,)`
      seq('(', $._expression, ',', ')'),
      // n-tuple `(e1, e2, ...)`  (n >= 2)
      seq('(', $._expression, ',', sep1($._expression, ','), ')'),
    ),

    integer_literal: $ => token(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F][0-9a-fA-F_]*/,
        /0b[01][01_]*/,
      ),
      optional(choice('i8','i16','i32','i64','u8','u16','u32','u64')),
    )),

    /* ------- Float ------- */
    float_literal: $ => token(seq(
      choice(
        seq(/[0-9][0-9_]*/, '.', /[0-9][0-9_]*/, optional(/[eE][+-]?[0-9][0-9_]*/)),
        seq(/[0-9][0-9_]*/, /[eE][+-]?[0-9][0-9_]*/),
      ),
      optional(choice('f32', 'f64')),
    )),

    /* ------- String -------
     * Standard double-quoted with escapes. Single-line only (no raw multi-line). */
    string_literal: $ => token(seq(
      '"',
      repeat(choice(
        /[^"\\\n]/,
        seq('\\', choice(
          /[ntr0\\"']/,
          /x[0-9a-fA-F]{2}/,
          /u\{[0-9a-fA-F]+\}/,
        )),
      )),
      '"',
    )),

    /* ------- Regex -------
     * `/pattern/flags`. Conflicts with `/` (division) — the external
     * scanner emits `_regex_literal` only when the parser state is
     * compatible with starting an expression. */
    identifier: $ => token(seq(
      /[a-zA-Z_][a-zA-Z0-9_]*/,
      optional('!'),
    )),
